--- a/application/.env.example
+++ b/application/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Lumen
+APP_NAME=UniversityMarket
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -11,9 +11,9 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=database_name
+DB_USERNAME=um_username
+DB_PASSWORD=um_password
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
