update composer key to start project instance

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     "scripts": {
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
+        ],
+        "start": "echo \"Your application is listening on http://localhost:8080\" && php -S localhost:8080 -t public"
     }
 }
