--- a/.env.example
+++ b/.env.example
@@ -15,14 +15,7 @@ DB_DATABASE=database_name
 DB_USERNAME=um_username
 DB_PASSWORD=um_password
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=hello@example.com
-MAIL_FROM_NAME="Example app"
+EMAIL_SERVICE_API_URL=http://localhost
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
