--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "aws/aws-sdk-php": "^3.199",
         "guzzlehttp/guzzle": "^7.3",
         "illuminate/mail": "^8.42",
         "laravel/lumen-framework": "^8.0"
