criacao section de constantes para autenticacao

--- a/app/Common/Constants/constants.ini
+++ b/app/Common/Constants/constants.ini
@@ -7,6 +7,9 @@
 ;    another_sub_key = "another value"
 ;    sub_key_with_int_value = 2021
 
+[auth]
+    session_expiration_time=720 ; Minutos - 12 horas
+
 [password]
     min_length=6
     max_length=15
