constantes para recuperacao de senha

--- a/app/Common/Constants/constants.ini
+++ b/app/Common/Constants/constants.ini
@@ -10,6 +10,10 @@
 [auth]
     session_expiration_time=720 ; Minutos - 12 horas
 
+[recuperacao_senha]
+    token_expiration_time=15 ; Minutos
+    tolerancia_expiration_time=5 ; Minutos
+
 [password]
     min_length=6
     max_length=15
